manifests/service.yaml
# =============================================================================
# Service
#
# カスタマイズ箇所:
#   - <NAMESPACE> : プロジェクト名
# =============================================================================
apiVersion: v1
kind: Service
metadata:
  name: hello-server
  namespace: <NAMESPACE>
  labels:
    app: hello-server
spec:
  selector:
    app: hello-server
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
